# Discoverykastle

./: .env.example  .gitguardian.yml  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  alembic.ini  cleanup.sh  docker-compose.agent.yml  docker-compose.yml  install.sh  pyproject.toml
.claude/: roadmap.md
.github/workflows/: agent-image.yml  ci.yml  dependabot-automerge.yml
agent/: Dockerfile  README.md  config.py  core.py  main.py  pyproject.toml  requirements.txt  updater.py
agent/collectors/: ansible.py  cve_scan.py  netmiko_collector.py  network_scan.py  puppet.py
agent/install/linux/: discoverykastle-agent.service  install.sh  uninstall.sh
agent/install/windows/: install.ps1  service.py  uninstall.ps1
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_users_table.py  0003_credentials_table.py  0004_teams_table.py  4b4c1ae5bfa7_sync_schema_with_current_models.py
docs/: agent.md  architecture.md  deployment.md  modules.md  security-modules.md  security.md  server.md
server/: config.py  database.py  logging_config.py  main.py
server/api/: agents.py  alerts.py  audit_log.py  auth_api.py  data.py  deploy.py  docs_api.py  inventory.py  modules.py  netbox.py  setup.py  tasks.py  teams.py  topology.py  users.py  vault.py  version.py  vulns.py  webpush.py  ws.py
server/cli/: main.py
server/middleware/: setup_guard.py
server/models/: __init__.py  agent.py  alert.py  credential.py  device.py  host.py  network.py  task.py  team.py  user.py  vulnerability.py
server/modules/: __init__.py  base.py  loader.py  registry.py
server/modules/builtin/ai/: module.py
server/modules/builtin/alerts/: module.py
server/modules/builtin/ansible/: module.py
server/modules/builtin/dns/: module.py
server/modules/builtin/inventory/: module.py
server/modules/builtin/ldap/: module.py
server/modules/builtin/netbox/: module.py
server/modules/builtin/puppet/: module.py
server/services/: auth.py  ca.py  deploy.py  docgen.py  ip_utils.py  rate_limit.py  task.py  vault.py  version.py  webpush.py
server/static/: sw.js  webpush.js
server/static/ui/: index.html
server/templates/: setup.html
tests/: conftest.py  test_agent_collectors.py  test_alerts_api.py  test_auth.py  test_ca.py  test_cli.py  test_data_ingestion.py  test_deploy.py  test_docgen.py  test_inventory.py  test_inventory_module.py  test_ip_utils.py  test_ldap_module.py  test_module_registry.py  test_modules_topology_api.py  test_notifications.py  test_rate_limit.py  test_rbac.py  test_task_engine.py  test_teams_api.py  test_topology_module.py  test_vault.py  test_version.py  test_vulns.py  test_ws.py
tests/integration/: conftest.py  test_auth_flow.py  test_inventory_flow.py  test_vault_flow.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/api/: agents.ts  client.ts  hosts.ts  networks.ts  vulns.ts
ui/src/components/: Layout.tsx  ProtectedRoute.tsx  SeverityBadge.tsx  StatusBadge.tsx
ui/src/hooks/: useAuth.ts  useDashboardWS.ts
ui/src/pages/: Agents.tsx  Dashboard.tsx  Devices.tsx  Hosts.tsx  Login.tsx  Networks.tsx  Topology.tsx  Vulns.tsx
(+7 files in other folders)
