[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "discoverykastle-agent"
version = "0.1.0"
description = "Discoverykastle agent — network discovery and security assessment collector"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Async HTTP client with mTLS support
    "httpx>=0.27.0",
    # YAML parsing (Puppet fact-cache, Ansible fact-cache)
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
# pip install 'discoverykastle-agent[netmiko]'
# Required when NETMIKO_ENABLED=true
netmiko = [
    "netmiko>=4.3",
]

# pip install 'discoverykastle-agent[ansible]'
# Required when ANSIBLE_ENABLED=true and AWX/Tower API pull is needed
ansible = [
    "httpx>=0.27.0",
]

[project.scripts]
# Installed as `dkagent` on the PATH after `pip install discoverykastle-agent`
dkagent = "agent.main:main"

[tool.setuptools.packages.find]
where = [".."]
include = ["agent*"]

[tool.setuptools.package-data]
"agent" = ["install/linux/*.sh", "install/linux/*.service", "install/windows/*.ps1"]
